--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/projectImages/logo.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/projectImages/logo1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="https://github.com/mdyeates/my-portfolio/raw/main/src/images/screenshot.png" />
-    <meta name="author" content="Michael Yeates" />
+    <meta name="author" content="Ruben Andia" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
