--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/projectImages/logo1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="https://github.com/mdyeates/my-portfolio/raw/main/src/images/screenshot.png" />
     <meta name="author" content="Ruben Andia" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Michael Yeates is a talented web developer who creates amazing digital experiences. With a focus on user experience, Michael brings your website ideas to life with precision and style. Contact Michael today to learn how he can help you craft a compelling online presence that engages and inspires your audience."
-    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -25,7 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Michael Yeates | Creative Web Developer based in Loughborough | Bringing your ideas to life</title>
+    <title>Ruben Andia</title>
   </head>
   <body>
     <div id="root"></div>
